<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foregroundGravity=""
                    android:src="@mipmap/ic_launcher" />

                <EditText
                    android:id="@+id/editTextUsernameOrEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="60dp"
                    android:ems="10"
                    android:hint="@string/usernameOrEmail"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editTextUsernameOrEmail"
                    android:layout_centerHorizontal="true"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editTextPassword"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/buttonLogin"
                        style="@style/Theme.AppCompat.DayNight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login" />

                    <Button
                        android:id="@+id/buttonRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Theme.AppCompat.DayNight"
                        android:layout_below="@id/buttonLogin"
                        android:layout_marginTop="20dp"
                        android:text="@string/register" />
                </RelativeLayout>
            </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>