<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ApartmentDetailsActivity">


    <!-- ViewPager2 for media carousel -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerMedia"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="3"
        tools:orientation="horizontal" />

    <!-- Wskaźnik kropek (DotsIndicator) -->
    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:dotsColor="@color/dot_unselected"
        app:dotsSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewPagerMedia"
        app:layout_constraintEnd_toEndOf="@+id/viewPagerMedia"
        app:layout_constraintStart_toStartOf="@+id/viewPagerMedia"
        app:selectedDotColor="@color/dot_selected" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPagerMedia">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewApartmentInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:elevation="4dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <!-- Apartment information -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="16dp"
                            android:text="Apartment Name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                        <TextView
                            android:id="@+id/textViewRent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="8dp"
                            android:text="Rent: $1000" />

                        <TextView
                            android:id="@+id/textViewLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="8dp"
                            android:text="test" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewApartmentDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:elevation="6dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:padding="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardViewApartmentInfo">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description" />

                        <TextView
                            android:id="@+id/textViewDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="8dp"
                            android:text="@string/lorem_ipsum" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>


    <!-- Add any additional TextViews to display other apartment details here -->
    <Button
        android:id="@+id/buttonRent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/rent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRentRequests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/rent_requests"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonPayments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/payments"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>